--- a/style.css
+++ b/style.css
@@ -189,6 +189,10 @@ section {
   text-align: center;
 }
 
+.helloText {
+  font-size: 1.75rem;
+}
+
 .section__text__p2 {
   font-size: 1.75rem;
   margin-bottom: 1rem;
